kubernetes/apps/minio/manifests/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: minio-api-ingress
  namespace: minio

spec:
  ingressClassName: public

  rules:
    - host: minio-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
