kubernetes/apps/minio/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: minio-ingress
  namespace: minio

spec:
  ingressClassName: public

  rules:
    - host: minio.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
